--- a/Resources/Web/flot.html
+++ b/Resources/Web/flot.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>OpenHardwareMonitor - Real time graphics</title>
     <style type="text/css">
         .flc-bar {
         font-size: 20pt;
